Fixed project being higher than the rest on smaller screens

--- a/src/components/projects/Projects.module.sass
+++ b/src/components/projects/Projects.module.sass
@@ -63,5 +63,8 @@
             .projectCard
                 img
                     width: 175px
+                &:hover
+                    animation: none
+                    transform: none
         
 
